examples/fail/member1.niu
struct Hoge {
  a: u64,
} {}

fn main() -> void {
  let hoge = Hoge { a: 91 };
  let b = hoge.b;
}
